[metadata]
name = nanotune
maintainer = Jana & QCoDeS Core Developers
maintainer_email = darulova.j@gmail.com
description = Code for automatically tuning quantum dots.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/microsoft/nanotune
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
license = MIT
project_urls =
    Documentation = https://github.com/microsoft/nanotune
    Source = https://github.com/microsoft/nanotune
    Tracker = https://github.com/microsoft/nanotune/issues

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
   qcodes>=0.22.0
   scikit-image>=0.18.0
   scikit-learn>=0.24.0
   reportlab
   gitpython

[options.package_data]
nanotune =
    configuration/*.json

[options.extras_require]
test =
    pytest>=6.0.0
   ; hypothesis>=5.49.0
   ; pytest-xdist>=2.0.0
   ; deepdiff>=5.0.2
   ; pytest-mock>=3.0.0
   ; pytest-rerunfailures>=5.0.0
   ; lxml>=4.3.0

[tool:pytest]
testpaths =
    nanotune/tests
    sim/test

junit_family = legacy

addopts =
    -n auto
    --dist=loadfile

markers = serial
; Filter google rcp related deprecation warnings.
; See https://github.com/googleapis/python-api-common-protos/issues/23
filterwarnings =
    ignore:Call to deprecated create function FieldDescriptor
    ignore:Call to deprecated create function Descriptor
    ignore:Call to deprecated create function EnumDescriptor
    ignore:Call to deprecated create function EnumValueDescriptor
    ignore:Call to deprecated create function FileDescriptor
    ignore:Call to deprecated create function OneofDescriptor

[mypy]
strict_optional = True
disallow_untyped_decorators = True
disallow_any_generics = True
ignore_missing_imports = True
show_column_numbers = True
warn_unused_ignores = True
warn_unused_configs = True
warn_redundant_casts = True
no_implicit_optional = True

[mypy-nanotune._version]
ignore_errors = True

[versioneer]
VCS = git
style = pep440
versionfile_source = nanotune/_version.py
versionfile_build = nanotune/_version.py
tag_prefix = v
parentdir_prefix = nanotune-

[coverage:run]
omit =
    nanotune/__init__.py
    */__init__.py
    nanotune/_version.py
    nanotune/tests/*
    sim/test/*


